modules/vpc/main.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name        = "uc-4-vpc"
  }
}


resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name        = "uc-4-igw"
  }
}

# Public Subnets
resource "aws_subnet" "public" {
  count                   = 2
  vpc_id                  = aws_vpc.main.id
  cidr_block              = cidrsubnet("10.0.0.0/20", 4, count.index)
  map_public_ip_on_launch = true
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  tags = {
    Name = "PublicSubnet-${count.index}"
  }
}

# Private Subnets
#resource "aws_subnet" "private" {
#  count             = 2
#  vpc_id            = aws_vpc.main.id
#  cidr_block        = cidrsubnet("10.0.16.0/20", 4, count.index)
#  availability_zone = data.aws_availability_zones.available.names[count.index]
#  tags = {
#    Name = "PrivateSubnet-${count.index}"
#  }
#}

# Elastic IP for NAT
#resource "aws_eip" "nat" {
#  domain = "vpc"
#}

# NAT Gateway in public subnet 0
#resource "aws_nat_gateway" "nat" {
#  allocation_id = aws_eip.nat.id
#  subnet_id     = aws_subnet.public[0].id
#}

# Route Table for Public Subnets
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "public" {
  count          = 2
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

# Route Table for Private Subnets
#resource "aws_route_table" "private" {
#  vpc_id = aws_vpc.main.id
#
#  route {
#    cidr_block     = "0.0.0.0/0"
#    nat_gateway_id = aws_nat_gateway.nat.id
#  }
#}
#
#resource "aws_route_table_association" "private" {
#  count          = 2
#  subnet_id      = aws_subnet.private[count.index].id
#  route_table_id = aws_route_table.private.id
#}

data "aws_availability_zones" "available" {}

output "vpc_id" {
  value = aws_vpc.main.id
}

output "public_subnets" {
  value = aws_subnet.public[*].id
}

#output "private_subnets" {
#  value = aws_subnet.private[*].id
#}
